// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItemRadioButtons native Component CartItemRadioButtons native should render correctly 1`] = `
<Styled(View)>
  <CollapsibleContainer
    arrowPos="20px"
    body={
      <React.Fragment>
        <ForwardRef>
          <RadioButtonInput
            borderWidth={1}
            buttonInnerColor="#000"
            buttonOuterColor="#000"
            buttonOuterSize={20}
            buttonSize={10}
            buttonStyle={Object {}}
            disabled={false}
            isSelected={false}
            obj={
              Object {
                "value": "BOSS",
              }
            }
            onPress={[Function]}
          />
          <ForwardRef />
        </ForwardRef>
        <ForwardRef>
          <LabeledRadioButton
            buttonInnerColor="#000"
            buttonOuterColor="#000"
            buttonOuterSize={20}
            buttonSize={10}
            buttonStyle={Object {}}
            checked={false}
            disabled={false}
            index={0}
            labelStyle={Object {}}
            labelWrapStyle={Object {}}
            obj={
              Object {
                "label": undefined,
                "value": "BOSS",
              }
            }
            onPress={[Function]}
          />
        </ForwardRef>
      </React.Fragment>
    }
    defaultOpen={true}
    getExpandedState={[Function]}
    header={
      <ForwardRef
        pointerEvents="none"
      >
        <RadioButtonInput
          borderWidth={1}
          buttonInnerColor="#000"
          buttonOuterColor="#000"
          buttonOuterSize={20}
          buttonSize={10}
          buttonStyle={Object {}}
          disabled={false}
          isSelected={true}
          obj={
            Object {
              "value": "BOSS",
            }
          }
          onPress={[Function]}
        />
        <ForwardRef />
      </ForwardRef>
    }
    height="50px"
    index={0}
    isBag={true}
    openedTile={0}
  />
</Styled(View)>
`;

exports[`CartItemRadioButtons native Component CartItemRadioButtons native should render correctly with orderItemType as BOSS 1`] = `
<Styled(View)>
  <CollapsibleContainer
    arrowPos="20px"
    body={
      <React.Fragment>
        <ForwardRef>
          <RadioButtonInput
            borderWidth={1}
            buttonInnerColor="#000"
            buttonOuterColor="#000"
            buttonOuterSize={20}
            buttonSize={10}
            buttonStyle={Object {}}
            disabled={false}
            isSelected={false}
            obj={
              Object {
                "value": "BOSS",
              }
            }
            onPress={[Function]}
          />
          <ForwardRef />
        </ForwardRef>
        <ForwardRef>
          <LabeledRadioButton
            buttonInnerColor="#000"
            buttonOuterColor="#000"
            buttonOuterSize={20}
            buttonSize={10}
            buttonStyle={Object {}}
            checked={false}
            disabled={false}
            index={0}
            labelStyle={Object {}}
            labelWrapStyle={Object {}}
            obj={
              Object {
                "label": undefined,
                "value": "BOSS",
              }
            }
            onPress={[Function]}
          />
        </ForwardRef>
      </React.Fragment>
    }
    defaultOpen={true}
    getExpandedState={[Function]}
    header={
      <ForwardRef
        pointerEvents="none"
      >
        <RadioButtonInput
          borderWidth={1}
          buttonInnerColor="#000"
          buttonOuterColor="#000"
          buttonOuterSize={20}
          buttonSize={10}
          buttonStyle={Object {}}
          disabled={false}
          isSelected={true}
          obj={
            Object {
              "value": "BOSS",
            }
          }
          onPress={[Function]}
        />
        <ForwardRef />
      </ForwardRef>
    }
    height="50px"
    index={0}
    isBag={true}
    openedTile={0}
  />
</Styled(View)>
`;

exports[`CartItemRadioButtons native Component CartItemRadioButtons native should render correctly with orderItemType as Bopis 1`] = `
<Styled(View)>
  <CollapsibleContainer
    arrowPos="20px"
    body={
      <React.Fragment>
        <ForwardRef>
          <RadioButtonInput
            borderWidth={1}
            buttonInnerColor="#000"
            buttonOuterColor="#000"
            buttonOuterSize={20}
            buttonSize={10}
            buttonStyle={Object {}}
            disabled={false}
            isSelected={true}
            obj={
              Object {
                "value": "BOPIS",
              }
            }
            onPress={[Function]}
          />
          <ForwardRef>
            undefined:
          </ForwardRef>
          <ForwardRef>
            <ForwardRef>
               New port center
            </ForwardRef>
          </ForwardRef>
        </ForwardRef>
        <ForwardRef>
          <LabeledRadioButton
            buttonInnerColor="#000"
            buttonOuterColor="#000"
            buttonOuterSize={20}
            buttonSize={10}
            buttonStyle={Object {}}
            checked={false}
            disabled={false}
            index={0}
            labelStyle={Object {}}
            labelWrapStyle={Object {}}
            obj={
              Object {
                "label": undefined,
                "value": "BOPIS",
              }
            }
            onPress={[Function]}
          />
        </ForwardRef>
      </React.Fragment>
    }
    defaultOpen={true}
    getExpandedState={[Function]}
    header={
      <ForwardRef
        pointerEvents="none"
      >
        <RadioButtonInput
          borderWidth={1}
          buttonInnerColor="#000"
          buttonOuterColor="#000"
          buttonOuterSize={20}
          buttonSize={10}
          buttonStyle={Object {}}
          disabled={false}
          isSelected={false}
          obj={
            Object {
              "value": "BOPIS",
            }
          }
          onPress={[Function]}
        />
        <ForwardRef />
      </ForwardRef>
    }
    height="50px"
    index={0}
    isBag={true}
    openedTile={0}
  />
</Styled(View)>
`;

exports[`CartItemRadioButtons native Component CartItemRadioButtons native should render correctly with orderItemType as ECOM 1`] = `
<Styled(View)>
  <CollapsibleContainer
    arrowPos="20px"
    body={
      <React.Fragment>
        <ForwardRef>
          <RadioButtonInput
            borderWidth={1}
            buttonInnerColor="#000"
            buttonOuterColor="#000"
            buttonOuterSize={20}
            buttonSize={10}
            buttonStyle={Object {}}
            disabled={false}
            isSelected={false}
            obj={
              Object {
                "value": "ECOM",
              }
            }
            onPress={[Function]}
          />
          <ForwardRef />
        </ForwardRef>
        <ForwardRef>
          <LabeledRadioButton
            buttonInnerColor="#000"
            buttonOuterColor="#000"
            buttonOuterSize={20}
            buttonSize={10}
            buttonStyle={Object {}}
            checked={true}
            disabled={false}
            index={0}
            labelStyle={Object {}}
            labelWrapStyle={Object {}}
            obj={
              Object {
                "label": undefined,
                "value": "ECOM",
              }
            }
            onPress={[Function]}
          />
        </ForwardRef>
      </React.Fragment>
    }
    defaultOpen={true}
    getExpandedState={[Function]}
    header={
      <ForwardRef
        pointerEvents="none"
      >
        <RadioButtonInput
          borderWidth={1}
          buttonInnerColor="#000"
          buttonOuterColor="#000"
          buttonOuterSize={20}
          buttonSize={10}
          buttonStyle={Object {}}
          disabled={false}
          isSelected={false}
          obj={
            Object {
              "value": "ECOM",
            }
          }
          onPress={[Function]}
        />
        <ForwardRef />
      </ForwardRef>
    }
    height="50px"
    index={0}
    isBag={true}
    openedTile={0}
  />
</Styled(View)>
`;
